--- a/package.json
+++ b/package.json
@@ -1,45 +1,59 @@
 {
+  "name": "Fortnite",
+  "description": "--AWESOMENESS--",
+  "version": "0.0.0",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-    "and": "0.0.3",
-    "anti-spam": "^0.2.7",
-    "array-sort": "^1.0.0",
+    "array-sort": "1.0.0",
     "ascii-data-table": "^2.1.1",
-    "canvas": "^1.6.11",
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
-    "child_process": "^1.0.2",
+    "canvas": "^1.6.12",
     "common-tags": "^1.8.0",
     "dateformat": "^3.0.3",
     "discord-anti-spam": "^1.1.2",
-    "discord.js": "^11.3.2",
+    "discord.js": "^11.4.2",
+    "discord.js-musicbot-addon": "^1.10.3",
+    "eris": "0.8.5",
+    "express": "^4.16.3",
+    "fetch": "^1.1.0",
+    "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
     "figlet": "^1.2.0",
-    "file-system": "^2.2.2",
+    "finalhandler": "^1.1.1",
     "forever": "^0.15.3",
-    "fortnite": "^4.1.1",
-    "fortnite-api": "^2.12.2",
+    "fortnite": "^3.0.0",
+    "fs": "0.0.2",
     "get-youtube-id": "^1.0.0",
-    "giphy-api": "^1.2.7",
+    "gif-search": "^2.0.1",
+    "giphy-api": "1.2.7",
     "goo.gl": "^0.1.4",
     "google-it": "^1.1.3",
     "google-translate-api": "^2.3.0",
-    "hastebin-gen": "^1.3.1",
-    "i": "^0.3.6",
-    "jimp": "^0.2.28",
+    "hh-mm-ss": "^1.2.0",
+    "jimp": "^0.5.0",
+    "js-data": "^3.0.4",
     "math-expression-evaluator": "^1.2.17",
     "moment": "^2.22.2",
+    "ms": "^2.1.1",
     "node-opus": "^0.3.0",
-    "npm": "^6.2.0",
     "opusscript": "0.0.6",
-    "pretty-ms": "^3.2.0",
-    "queue": "^4.4.2",
-    "quick.db": "^6.3.2",
-    "short-number": "^1.0.6",
+    "pretty-ms": "^4.0.0",
+    "python": "0.0.4",
+    "quick.db": "6.3.1",
+    "random-number": "0.0.9",
+    "request": "^2.85.0",
+    "router": "^1.3.2",
     "simple-youtube-api": "^5.0.2",
-    "sqlite": "^2.9.2",
-    "table": "^4.0.3",
-    "winston": "^3.0.0",
-    "youtube-info": "^1.2.0",
-    "ytdl-core": "^0.21.1",
-    "zalgolize": "^1.2.4"
+    "snekfetch": "^3.6.4",
+    "sqlite": "^2.9.1",
+    "table": "^5.0.2",
+    "youtube-info": "^1.2.1",
+    "ytdl-core": "^0.25.2",
+    "zalgolize": "1.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
